@@ -1,1 +1,0 @@
-Stub file to be replaced with the real thing on Windows.
